Add `avatar-animation` property in spine (#48)

--- a/src/hub.html
+++ b/src/hub.html
@@ -150,7 +150,7 @@
                         </template>
 
                         <template data-name="Spine">
-                            <a-entity is-remote-hover-target personal-space-invader="radius: 0.2; useMaterial: true;" bone-visibility>
+                            <a-entity is-remote-hover-target personal-space-invader="radius: 0.2; useMaterial: true;" bone-visibility avatar-animation="front: 0; right: 0;">
                                 <a-entity class="avatar-inspect-collider" avatar-inspect-collider tags="togglesHoveredActionSet: true; ignoreSpaceBubble: true;" is-remote-hover-target inspect-button></a-entity>
                                 <a-entity class="chest-image" scale="0.18 0.18 0.18" position="0 -0.025 0.13"></a-entity>
                                 <a-entity tags="ignoreSpaceBubble: true;" class="interactable ui interactable-ui" layers="mask: 768; recursive: true;">
@@ -1092,7 +1092,7 @@
                 </template>
 
                 <template data-name="Spine">
-                    <a-entity>
+                    <a-entity avatar-animation="front: 0; right: 0;">
                         <a-entity class="chest-image" scale="0.18 0.18 0.18" position="0 -0.025 0.13"></a-entity>
                     </a-entity>
                 </template>
